--- a/core-style/config/_parameters.scss
+++ b/core-style/config/_parameters.scss
@@ -25,11 +25,12 @@ $border-light: solid 1px rgba(0, 0, 0, 0.5);
 $main-shadow: 0px 2px 15px 0px rgba(0, 0, 0, 0.25);
 
 // Font size
-$fs-title-b: 40px;
-$fs-title-s: 30px;
+$fs-title: 48px;
+$fs-title-media: 32px;
+$fs-min-title: 28px;
 
-$fs-title-bs: 28px;
-$fs-title-ss: 20px;
+$fs-middle: 24px;
+$fs-middle-media: 20px;
 
 $fs-subtitle-b: 1.2rem;
 $fs-subtitle-s: 1.2rem;
