--- a/css/main.css
+++ b/css/main.css
@@ -778,8 +778,6 @@ button {
         grid-template-columns: repeat(3, 1fr);
     -ms-grid-rows: (1fr)[15];
         grid-template-rows: repeat(15, 1fr);
-    gap: 10px;
-    height: 1000px;
         grid-template-areas: "title title one" "ten eight one" "ten eight one" "ten eight one" "ten eight two" "ten eight two" "nine six two" "nine six two" "nine six three" "nine six three" "five six three" "five seven three" "five seven four" "five seven four" "five seven four";
   }
   .grid-cart__descr-label {
@@ -793,15 +791,11 @@ button {
         grid-template-columns: repeat(6, 1fr);
     -ms-grid-rows: (1fr)[16];
         grid-template-rows: repeat(16, 1fr);
-    gap: 10px;
     height: 1500px;
         grid-template-areas: "title title title title title title" "one one one two two two" "one one one two two two" "one one one two two two" "five five five two two two" "five five five nine nine nine" "five five five nine nine nine" "three three three three four four" "three three three three four four" "three three three three four four" "six six six seven seven seven" "six six six seven seven seven" "six six six seven seven seven" "eight eight eight ten ten ten" "eight eight eight ten ten ten" "eight eight eight ten ten ten";
   }
   .first-screen__title {
     text-align: center;
-  }
-  .grid-cart__descr-label {
-    font-size: 15px;
   }
 }
 
@@ -811,12 +805,10 @@ button {
         grid-template-columns: repeat(2, 1fr);
     -ms-grid-rows: auto 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
         grid-template-rows: auto 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    gap: 10px;
     min-height: 2500px;
         grid-template-areas: "title title" "one one" "two two" "three three" "four nine" "five five" "six six" "seven seven" "eight eight" "ten ten";
   }
   .first-screen__title {
-    text-align: center;
     font-size: 27px;
   }
   .grid-cart__descr-label {
@@ -836,7 +828,7 @@ button {
 .psy {
   margin: 0 auto;
   max-width: 100%;
-  min-height: 350px;
+  min-height: 430px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -846,28 +838,18 @@ button {
   margin-bottom: 70px;
 }
 
-.psy .psy {
-  margin-bottom: 0;
-}
-
 .psy__photo {
   min-width: 250px;
   width: 100%;
   max-width: 300px;
   position: relative;
-  margin-right: 30px;
+  margin-right: 20px;
+  -webkit-box-shadow: 0px 2px 15px 0px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 2px 15px 0px rgba(0, 0, 0, 0.25);
 }
 
 .psy__photo--modif {
-  min-width: 250px;
-  width: 100%;
-  max-width: 300px;
-  position: relative;
-  margin: 0 0 0 30px;
-}
-
-.psy__square {
-  display: none;
+  margin: 0 0 0 20px;
 }
 
 .psy__image {
@@ -882,7 +864,7 @@ button {
 
 .psy-desc {
   min-width: 400px;
-  max-width: 480px;
+  max-width: 470px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -895,136 +877,40 @@ button {
           flex-direction: column;
 }
 
-.psy-desc__text {
-  margin: 0 0 20px 0;
-}
-
 .psy-desc__text--modif {
   text-align: right;
 }
 
 .psy-desc__title {
-  font-size: 28px;
+  font-size: 24px;
   border-bottom: 1px solid #ffa500;
   display: inline-block;
-  margin: 0 0 24px 0;
+  margin: 0 0 5px 0;
+}
+
+.psy-desc__title--two {
+  border: none;
 }
 
 .psy-desc__subtitle {
-  font-size: 24px;
-  color: rgba(0, 0, 0, 0.7);
+  font-size: 18px;
   margin: 0;
 }
 
-.psy-desc__desc-time {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin: 0 0 24px 0;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+.psy-desc__button {
+  font-size: 18px;
+  color: black;
+  text-decoration: none;
+  padding: 10px 20px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  border: 1px solid #ffa500;
+  text-align: center;
 }
 
-.psy-desc__inner-time {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-right: 20px;
-}
-
-.psy-desc__inner-time:last-child {
-  margin: 0;
-}
-
-.psy-desc__num {
-  font-size: 48px;
-  margin: 0;
-}
-
-.psy-desc__label {
-  font-size: 24px;
-  margin: 0 0 0 15px;
-  line-height: 100%;
-}
-
-.psy-desc__slider {
-  height: 100px;
-}
-
-.slider {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 100%;
-}
-
-.slider__contr {
-  width: 25px;
-  position: relative;
-  background: rgba(255, 255, 255, 0.5);
-  cursor: pointer;
-}
-
-.slider__contr::before, .slider__contr::after {
-  content: "";
-  display: block;
-  width: 50%;
-  height: 1px;
-  position: absolute;
-  background-color: black;
-}
-
-.slider__contr-1::before {
-  top: 46%;
-  left: 10%;
-  -webkit-transform: rotate(-65deg);
-          transform: rotate(-65deg);
-}
-
-.slider__contr-1::after {
-  top: 56%;
-  left: 10%;
-  -webkit-transform: rotate(65deg);
-          transform: rotate(65deg);
-}
-
-.slider__wrap {
-  overflow: hidden;
-  width: 100%;
-}
-
-.slider__mov-tape {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.slider__slide {
-  height: 100px;
-  cursor: pointer;
-  margin-right: 5px;
-}
-
-.slider__slide-img {
-  height: 100%;
-}
-
-.slider__contr-2::before {
-  top: 46%;
-  right: 10%;
-  -webkit-transform: rotate(65deg);
-          transform: rotate(65deg);
-}
-
-.slider__contr-2::after {
-  top: 56%;
-  right: 10%;
-  -webkit-transform: rotate(-65deg);
-          transform: rotate(-65deg);
+.psy-desc__button--hover:hover {
+  color: white;
+  background-color: #ffa500;
 }
 
 .advantge {
@@ -1234,6 +1120,7 @@ button {
   display: flex;
   -ms-flex-item-align: center;
       align-self: center;
+  margin-right: -20px;
 }
 
 .reviews__contr-item {
@@ -1243,10 +1130,6 @@ button {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   margin-right: 20px;
-}
-
-.reviews__contr-item:last-child {
-  margin: 0;
 }
 
 .reviews__contr-dot {
@@ -1265,28 +1148,11 @@ button {
 }
 
 .reviews-slider__slide {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.reviews-slider__photo {
-  width: 40%;
-  position: relative;
-}
-
-.reviews-slider__images {
-  position: absolute;
-  top: 0;
-  left: 0;
-  -o-object-fit: cover;
-     object-fit: cover;
-  width: 100%;
-  height: 100%;
+  background-color: white;
 }
 
 .reviews-slider__desc {
-  width: 60%;
+  width: 93%;
   padding: 20px;
 }
 
@@ -1325,6 +1191,10 @@ button {
 }
 
 .reviews-slider__text-desc::-webkit-scrollbar-corner {
+  background: transparent;
+}
+
+.reviews-slider__text-desc::-webkit-scrollbar-corner:active {
   background: transparent;
 }
 
@@ -1393,11 +1263,6 @@ button {
         -ms-flex-direction: column;
             flex-direction: column;
   }
-  .reviews-slider__photo {
-    width: 100%;
-    height: 200px;
-    position: relative;
-  }
   .reviews-slider__images {
     position: absolute;
     top: 0;
@@ -1414,7 +1279,7 @@ button {
             box-sizing: border-box;
   }
   .reviews-slider__title {
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 400;
     margin: 0 0 10px 0;
   }
@@ -1483,9 +1348,7 @@ button {
 }
 
 .call__wrap-number {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 0 800px;
-          flex: 0 0 800px;
+  width: 800px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1503,19 +1366,19 @@ button {
 }
 
 .call__name {
-  font-size: 28px;
+  font-size: 24px;
   font-weight: 400;
-  margin: 0 0 10px 0;
+  margin: 0 0 5px 0;
 }
 
 .call__t-number {
   text-decoration: none;
   color: white;
   font-weight: 700;
-  font-size: 42px;
+  font-size: 38px;
 }
 
-@media (max-width: 1306px) {
+@media (max-width: 1179px) {
   .call__wrap {
     padding: 20px;
   }
@@ -1525,11 +1388,6 @@ button {
             flex: 0 1 320px;
   }
   .call__title {
-    margin: 0;
-  }
-  .call__subtitle {
-    font-size: 24px;
-    color: rgba(255, 255, 255, 0.5);
     margin: 0;
   }
   .call__wrap-number {
@@ -1624,6 +1482,7 @@ button {
 @media (max-width: 768px) {
   .title {
     font-size: calc(30px + 18 * ((100vw - 320px) / 448));
+    margin: 30px 0 20px 0;
   }
   .min-title {
     font-size: calc(20px + 4 * ((100vw - 320px) / 448));
@@ -1699,6 +1558,7 @@ button {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 auto;
             flex: 0 0 auto;
+    width: 100%;
   }
   .call__inner-number {
     margin-bottom: 20px;
@@ -1741,9 +1601,6 @@ button {
     -webkit-box-ordinal-group: 2;
         -ms-flex-order: 1;
             order: 1;
-  }
-  .psy__square {
-    display: none;
   }
   .psy__image {
     position: absolute;
@@ -1789,116 +1646,6 @@ button {
             align-items: center;
     text-align: center;
   }
-  .psy-desc__title {
-    margin-bottom: 10px;
-  }
-  .psy-desc__subtitle {
-    font-size: 20px;
-    color: rgba(0, 0, 0, 0.7);
-    margin: 0;
-  }
-  .psy-desc__desc-time {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    margin: 0 0 24px 0;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-  }
-  .psy-desc__inner-time {
-    width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    margin: 0;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    text-align: center;
-  }
-  .psy-desc__inner-time:last-child {
-    margin: 0;
-  }
-  .psy-desc__num {
-    font-size: 48px;
-    margin: 0;
-  }
-  .psy-desc__label {
-    font-size: 20px;
-    margin: 0;
-    line-height: 100%;
-  }
-  .psy-desc__slider {
-    height: 100px;
-  }
-  .slider {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    width: 100%;
-  }
-  .slider__contr {
-    width: 25px;
-    position: relative;
-    background: rgba(255, 255, 255, 0.5);
-    cursor: pointer;
-  }
-  .slider__contr::before, .slider__contr::after {
-    content: "";
-    display: block;
-    width: 50%;
-    height: 1px;
-    position: absolute;
-    background-color: black;
-  }
-  .slider__contr-1::before {
-    top: 46%;
-    left: 10%;
-    -webkit-transform: rotate(-65deg);
-            transform: rotate(-65deg);
-  }
-  .slider__contr-1::after {
-    top: 56%;
-    left: 10%;
-    -webkit-transform: rotate(65deg);
-            transform: rotate(65deg);
-  }
-  .slider__wrap {
-    overflow: hidden;
-    width: 100%;
-  }
-  .slider__mov-tape {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-transform: translateX(-150px);
-            transform: translateX(-150px);
-  }
-  .slider__slide {
-    height: 100px;
-    cursor: pointer;
-    margin-right: 5px;
-  }
-  .slider__slide-img {
-    height: 100%;
-  }
-  .slider__contr-2::before {
-    top: 46%;
-    right: 10%;
-    -webkit-transform: rotate(65deg);
-            transform: rotate(65deg);
-  }
-  .slider__contr-2::after {
-    top: 56%;
-    right: 10%;
-    -webkit-transform: rotate(-65deg);
-            transform: rotate(-65deg);
-  }
 }
 
 @media (max-width: 480px) {
@@ -1912,20 +1659,18 @@ button {
     width: 100%;
   }
   .carts-desc {
-    max-width: 600px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: 0 auto 50px auto;
     text-align: center;
   }
   .carts-desc__image {
-    width: 70%;
+    width: 95%;
     margin: 0 0 10px 0;
     -webkit-box-ordinal-group: 3;
         -ms-flex-order: 2;
@@ -1948,7 +1693,6 @@ button {
     color: rgba(0, 0, 0, 0.7);
   }
   .carts-desc__inner-text--modif {
-    margin: 0;
     text-align: center;
   }
   .call__wrap {
@@ -1998,99 +1742,15 @@ button {
   }
   .psy-desc__subtitle {
     font-size: 16px;
-    color: rgba(0, 0, 0, 0.7);
-    margin: 0;
   }
-  .psy-desc__desc-time {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    margin: 0 0 15px 0;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+  .questions__container {
+    max-width: 600px;
+    margin-bottom: -10px;
   }
-  .psy-desc__inner-time {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    margin: 0;
+  .questions__title {
+    text-align: center;
   }
-  .psy-desc__inner-time:last-child {
-    margin: 0;
-  }
-  .psy-desc__num {
-    font-size: 30px;
-    margin: 0;
-  }
-  .psy-desc__label {
-    font-size: 16px;
-    margin: 0;
-    line-height: 100%;
-  }
-  .psy-desc__slider {
-    height: 100px;
-  }
-  .slider {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    width: 100%;
-  }
-  .slider__contr {
-    height: 100%;
-    width: 25px;
-    position: relative;
-    background: rgba(255, 255, 255, 0.5);
-    cursor: pointer;
-  }
-  .slider__contr::before, .slider__contr::after {
-    content: "";
-    display: block;
-    width: 50%;
-    height: 1px;
-    position: absolute;
-    background-color: black;
-  }
-  .slider__contr-1::before {
-    top: 47%;
-    left: 10%;
-    -webkit-transform: rotate(-65deg);
-            transform: rotate(-65deg);
-  }
-  .slider__contr-1::after {
-    top: 56%;
-    left: 10%;
-    -webkit-transform: rotate(65deg);
-            transform: rotate(65deg);
-  }
-  .slider__wrap {
-    overflow: hidden;
-    width: 100%;
-  }
-  .slider__mov-tape {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-transform: translateX(-150px);
-            transform: translateX(-150px);
-  }
-  .slider__slide-img {
-    height: 100%;
-  }
-  .slider__contr-2::before {
-    top: 47%;
-    right: 10%;
-    -webkit-transform: rotate(65deg);
-            transform: rotate(65deg);
-  }
-  .slider__contr-2::after {
-    top: 56%;
-    right: 10%;
-    -webkit-transform: rotate(-65deg);
-            transform: rotate(-65deg);
+  .quest__wrap-title-btn {
+    margin: 0 0 10px;
   }
 }
